--- a/package.json
+++ b/package.json
@@ -2,21 +2,23 @@
   "name": "hi",
   "version": "0.0.1",
   "description": "",
-  "main": "build/index.js",
+  "main": "out/index.js",
   "scripts": {},
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/katex": "^0.14.0",
     "@types/marked": "^4.0.2",
     "@types/node": "^17.0.15",
-    "@typescript-eslint/eslint-plugin": "^5.10.2",
-    "@typescript-eslint/parser": "^5.10.2",
-    "eslint": "^8.8.0",
+    "@types/nunjucks": "3.2.1",
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "eta": "^1.12.3",
+    "commander": "^5.1.0",
+    "highlight.js": "^11.5.1",
+    "katex": "^0.15.6",
     "marked": "^4.0.12",
+    "nunjucks": "^3.2.3",
     "yaml": "^1.10.2"
   }
 }
