--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
     "@types/katex": "^0.14.0",
     "@types/marked": "^4.0.2",
     "@types/node": "^17.0.15",
@@ -15,6 +16,7 @@
   },
   "dependencies": {
     "commander": "^5.1.0",
+    "crypto-js": "^4.1.1",
     "highlight.js": "^11.5.1",
     "katex": "^0.15.6",
     "marked": "^4.0.12",
