--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,19 +3,25 @@
         "browser": true,
         "es2021": true
     },
-    "extends": [
-        "eslint:recommended",
-        "plugin:@typescript-eslint/recommended"
-    ],
+    "extends": ["eslint:recommended"],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
+    "rules": {
+        "no-unused-vars": "off",
+        "semi": "error",
+        "no-unreachable": "error"
+    },
     "plugins": [
         "@typescript-eslint"
     ],
-    "rules": {
-        "@typescript-eslint/no-explicit-any": "off"
+    "settings": {
+        "import/resolver": {
+            "node": {
+                "extensions": [".js", ".jsx", ".ts", ".tsx"]
+            }
+        }
     }
 }
