--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/marked": "^4.0.2",
     "@types/node": "^17.0.15",
     "@types/nunjucks": "3.2.1",
-    "typescript": "^4.5.5"
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
+    "typescript": "^4.6.4"
   },
   "dependencies": {
     "commander": "^5.1.0",
@@ -21,6 +23,7 @@
     "katex": "^0.15.6",
     "marked": "^4.0.12",
     "nunjucks": "^3.2.3",
+    "prettier": "^2.6.2",
     "yaml": "^1.10.2"
   }
 }
