--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "typescript": "^4.6.4"
   },
   "dependencies": {
+    "chokidar": "^3.5.3",
     "commander": "^5.1.0",
     "crypto-js": "^4.1.1",
     "highlight.js": "^11.5.1",
