--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
+    "@types/express": "^4.17.13",
     "@types/katex": "^0.14.0",
     "@types/marked": "^4.0.2",
     "@types/node": "^17.0.15",
@@ -20,6 +21,7 @@
     "chokidar": "^3.5.3",
     "commander": "^5.1.0",
     "crypto-js": "^4.1.1",
+    "express": "^4.18.1",
     "highlight.js": "^11.5.1",
     "katex": "^0.15.6",
     "marked": "^4.0.12",
