--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/marked": "^4.0.2",
     "@types/node": "^17.0.15",
     "@types/nunjucks": "3.2.1",
+    "@types/pug": "^2.0.6",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
     "typescript": "^4.6.4"
@@ -25,6 +26,7 @@
     "marked": "^4.0.12",
     "nunjucks": "^3.2.3",
     "prettier": "^2.6.2",
+    "pug": "^3.0.2",
     "yaml": "^1.10.2"
   }
 }
