--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chokidar": "^3.5.3",
     "commander": "^5.1.0",
     "crypto-js": "^4.1.1",
+    "front-matter": "^4.0.2",
     "highlight.js": "^11.5.1",
     "katex": "^0.15.6",
     "marked": "^4.0.12",
