--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/pug": "^2.0.6",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.6.4"
   },
   "dependencies": {
