--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     "moduleResolution": "node"
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "src/extension"]
+  "exclude": ["node_modules"]
 }
